<resources>
    <string name="app_name">Moodio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_clear_recents">Clear Recents</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_about">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_songs">My Songs</string>
    <string name="title_activity_songs_detail">SongsDetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Search</string>
    <string name="action_search">Search</string>
    <string name="section_title">Lyrics</string>
    <string name="action_playList">Listen</string>
    <string name="action_library">My Library</string>
    <string name="title_activity_play_list">PlayListActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-7649988513709896/6076939964</string>
    <string name="banner_ad_unit_id_2">ca-app-pub-7649988513709896/4690271561</string>
    <string name="native_ad_unit_id_1">ca-app-pub-7649988513709896/2971693962</string>
    <string name="native_ad_unit_id_2">ca-app-pub-7649988513709896/4829872360</string>
    <string name="down_dialog_ad_unit_id">ca-app-pub-7649988513709896/2535364365</string>
    <string name="download">Download Song</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_myplaylist">My Playlist</string>
    <string name="title_activity_about">About</string>
    <string name="device_id">308E7416EBE0CC76AE276E73FFA1AE94</string>
</resources>
